docs: Run make swagger to generate health endpoint doc
